--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -28,7 +28,7 @@
 		</header>
 		<main class="cont1">
 
-			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycby5Ykpmf52ifTHmUjgD4tWsVMR5UXcVgFmf0XKPImdnTeQbC9w/exec" data-show-id="no" data-custom-JSON-to-send-string='{"gscript_callback_function": "login"}' style="display: none;" id="login_form">
+			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycby5Ykpmf52ifTHmUjgD4tWsVMR5UXcVgFmf0XKPImdnTeQbC9w/exec" data-show-id="no" data-custom-JSON-to-send-string='{"gscript_callback_function": "login_or_delete"}' style="display: none;" id="login_form">
 				<table class="u1">
 					<tr>
 						<td colspan="2">
@@ -60,8 +60,19 @@
 						</td>
 					</tr>
 					<tr>
+						<td>
+							Task:
+						</td>
+						<td>
+							<select onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\'></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
+								<option value="add">Add notice</option>
+								<option value="delete">Delete notice</option>
+							</select>
+						</td>
+					</tr>
+					<tr>
 						<td colspan="2">
-							<div class="media1"><div class="media1"><input class="u1" style="margin-top: 0;" type="submit" name="Submit" value="Login"></div></div>
+							<div class="media1"><div class="media1"><input id="submit_button" class="u1" style="margin-top: 0;" type="submit" name="Submit" value="Login"></div></div>
 						</td>
 					</tr>
 				</table>
@@ -69,14 +80,14 @@
 
 			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycby5Ykpmf52ifTHmUjgD4tWsVMR5UXcVgFmf0XKPImdnTeQbC9w/exec" data-custom-JSON-to-send-string='{"gscript_callback_function": "notice_post"}' data-show-id="no" data-send-creds="yes" id="notice_form" style="display: none;">
 				<span>You are logged in as <span id="login_type">HOD</span>.</span>
-				<table class="u1">
+				<table class="u1" style="overflow-x: scroll;">
 					<tr>
 						<td colspan="2">
 							<h4>Add a notice: </h4>
 						</td>
 					</tr>
 					<tr>
-						<td style="width: 25%;">
+						<td style="width: 25%;min-width: 80px;">
 							Title:
 						</td>
 						<td>
