--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link id="variables_css" rel="stylesheet" type="text/css" href="./css/variables.css">
-		<link id="layout_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link id="default_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
-		<link id="nav_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
-		<link id="media_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
-		<link id="button_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
-		<link id="putins_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link id="notices_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
-		<link id="loading_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
-		<link id="google_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
-		<link id="plain_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
-		<!-- https://sites-admin.github.io/website-modules -->
+		<link id="layout_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/layout.css">
+		<link id="default_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/default.css">
+		<link id="nav_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
+		<link id="media_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/media.css">
+		<link id="button_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/button/button.css">
+		<link id="putins_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/putins.css">
+		<link id="notices_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/notices/notices.css">
+		<link id="loading_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/css/loading.css">
+		<link id="google_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/google.css">
+		<link id="plain_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/keyframes/plain.css">
+		<!-- https://lib.ameonlinesolutions.com -->
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
@@ -47,15 +47,15 @@
 		</footer>
 	</body>
 
-	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/css/loading.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/notices/notices.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/css/loading.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/notices/notices.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/nav/nav.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		request("https://docs.google.com/document/d/e/2PACX-1vQjXPMkabDnMPoib_iUfutrY9hdmFU_4qDt7WKflz2nlHOW6s7xo84AyglPA9XIKf8AbkyQpYyvlkrX/pub?embedded=true","putins_make_page_from_gdoc","contents_nav","contents_page","Home");
 	</script>
