--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -17,10 +17,10 @@
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/iframe/iframe-svg.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/svg/svg.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/svg/svg.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
-		<!-- https://sites-admin.github.io/website-modules -->
+		<!-- https://lib.ameonlinesolutions.com -->
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
@@ -150,12 +150,12 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
 	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/form/form.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/form/form.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
