--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/table/table.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/form/form.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/in-page-images.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/background-images.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/iframe/iframe-svg.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/layout.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/default.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/table/table.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/form/form.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/button/button.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/in-page-images.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/background-images.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/media.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/keyframes/plain.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/iframe/iframe-svg.css">
 		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/svg/svg.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
@@ -152,14 +152,14 @@
 	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
 	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
 	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/media/img/background-images.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
 	<script src="https://lib.ameonlinesolutions.com/elements/form/form.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
-	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script> 
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/svg/svg.js" type="text/javascript"></script> 
+	<script src="https://lib.ameonlinesolutions.com/elements/nav/nav.js" type="text/javascript"></script> 
 
 			<script type="text/javascript">
 				if(sessionStorage)
