--- a/404.html
+++ b/404.html
@@ -22,9 +22,6 @@
 		<header class="cont1" style="margin: 0;">
 			<a target="_blank" href="https://a4u.co.in/"><img id="top_img" class="cont1"></a>
 		</header>
-		<script type="text/javascript">
-			document.getElementById("top_img").src= location.pathname=="/mm2021"?"https://static-data.a4u.co.in/mech/images/mm2021.jpg":"/images/logo.jpg";
-		</script>
 		<main class="cont1">
 			<section style="text-align: center;overflow: hidden;background-color: var(--main-color-2);" class="u1">
 				<span id="top_scroll_text" style="text-align: center;float: left;background-color: var(--main-color-2);color: var(--main-color);margin-top: 4px;margin-bottom: 4px;animation: move_lr 16s infinite;" class="cont1">
@@ -58,6 +55,13 @@
 	</body>
 
 	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			request_exist("https://static-data.a4u.co.in/mech/images"+location.pathname+".jpg").then(
+				(res,err)=>
+				{
+					document.getElementById("top_img").src=res?"https://static-data.a4u.co.in/mech/images"+location.pathname+".jpg":"/images/logo.jpg";
+			);
+		</script>
 	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
 	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
 	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
