--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -5,22 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/table/table.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/form/form.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/in-page-images.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/background-images.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/keyframes/plain.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/iframe/iframe-svg.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/svg/svg.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/layout.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/default.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/nav/nav.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/table/table.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/form/form.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/button/button.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/media/img/in-page-images.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/media/img/background-images.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/media/media.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/keyframes/plain.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/iframe/iframe-svg.css">
+		<link rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/svg/svg.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
-		<!-- https://lib.ameonlinesolutions.com -->
+		<!-- https://lib.a4u.co.in -->
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
@@ -150,16 +150,16 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
 	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/form/form.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/svg/svg.js" type="text/javascript"></script> 
-	<script src="https://lib.ameonlinesolutions.com/elements/nav/nav.js" type="text/javascript"></script> 
+	<script src="https://lib.a4u.co.in/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/design/default.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/elements/media/img/background-images.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/elements/form/form.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://lib.a4u.co.in/svg/svg.js" type="text/javascript"></script> 
+	<script src="https://lib.a4u.co.in/elements/nav/nav.js" type="text/javascript"></script> 
 
 			<script type="text/javascript">
 				if(sessionStorage)
