--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<base target="_blank">
 		<title>Academics for you</title>
 		<link id="variables_css" rel="stylesheet" type="text/css" href="./css/variables.css">
-		<link id="layout_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/layout.css">
-		<link id="default_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/default.css">
-		<link id="nav_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/nav/nav.css">
-		<link id="media_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/media/media.css">
-		<link id="button_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/elements/button/button.css">
-		<link id="putins_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/utils/putins/putins.css">
-		<link id="notices_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/utils/notices/notices.css">
-		<link id="loading_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/utils/css/loading.css">
-		<link id="google_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/utils/putins/google.css">
-		<link id="plain_css" rel="stylesheet" type="text/css" href="https://lib.a4u.co.in/design/keyframes/plain.css">
-		<!-- https://lib.a4u.co.in -->
+		<link id="layout_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/layout.css">
+		<link id="default_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/default.css">
+		<link id="nav_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
+		<link id="media_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/media.css">
+		<link id="button_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/button/button.css">
+		<link id="putins_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/putins.css">
+		<link id="notices_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/notices/notices.css">
+		<link id="loading_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/css/loading.css">
+		<link id="google_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/google.css">
+		<link id="plain_css" rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/keyframes/plain.css">
+		<!-- https://lib.ameonlinesolutions.com -->
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
@@ -48,15 +48,15 @@
 		</footer>
 	</body>
 
-	<script src="https://lib.a4u.co.in/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/design/default.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/utils/css/loading.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/utils/notices/notices.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/elements/nav/nav.js" type="text/javascript"></script>
-	<script src="https://lib.a4u.co.in/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/css/loading.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/notices/notices.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/nav/nav.js" type="text/javascript"></script>
+	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		let page=location.hash.substr(1);
 		if(!page) page="Home";
