--- a/404.html
+++ b/404.html
@@ -56,10 +56,10 @@
 
 	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			request_exist("https://static-data.ameonlinesolutions.com/mech/images"+location.pathname+".jpg").then(
+			request_exist("https://static-data.a4u.co.in/mech/images"+location.pathname+".jpg").then(
 				(res,err)=>
 				{
-					document.getElementById("top_img").src=res?"https://static-data.ameonlinesolutions.com/mech/images"+location.pathname+".jpg":"/images/logo.jpg";
+					document.getElementById("top_img").src=res?"https://static-data.a4u.co.in/mech/images"+location.pathname+".jpg":"/images/logo.jpg";
 				}
 			);
 		</script>
