--- a/staff/index.html
+++ b/staff/index.html
@@ -220,7 +220,7 @@
 // 				(res)=>
 // 				{
 // 					const roles=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["roles"];
-					const roles=["HOD","Faculty","Placement","iMESA","Project","Exam","Exam052"];
+					const roles=["Faculty"];
 					for(let role of roles)
 					{
 						document.getElementById("roles").insertAdjacentHTML("beforeend","<option value=\""+role+"\">"+role+"</option>");
